tests/paczka1/small_fuzzy/72716064.err
Error in line 10: ETnek A59 33,3
Error in line 11: ETnek S49 40,9
Error in line 16: CSWpy3vC S4X X2,8
